attempt to fix field shadows not showing on mobile

--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -141,7 +141,7 @@ input[type=text], input[type=url], input[type=email], input[type=password], inpu
   background-color: white;
   box-shadow: $standard-shadow;
   border-radius: $standard-border-radius;
-  border: none;
+  border: hidden 1px;
   padding: 0.25rem 2rem;
   font-weight: 100;
   margin-bottom: 1rem;
